--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "@types/node": "^20.6.0",
+    "canvas": "^2.11.2",
     "typescript": "^5.2.2"
   },
   "scripts": {
