[~] Test of deploy github actions

--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "npm run buildTSC && npm run buildCSS && npm run buildHTML",
+    "buildWindows": "npm run buildTSC && npm run buildCSSWindows && npm run buildHTMLWindows",
+    "buildTSC" : "tsc",
+    "buildCSS": "cp -r css/* build/css/",
+    "buildHTML": "cp /index.html build/",
+    "buildCSSWindows": "xcopy /i /y css\\* build\\css\\",
+    "buildHTMLWindows": "xcopy /i /y index.html build\\"
   },
   "repository": {
     "type": "git",
