[~] Setup prod env to ignore gitignore

--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -17,9 +17,9 @@ jobs:
     - name: 🏗️ Build
       run: |
         npm install
-        npm run build
+        npm run buildProd
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: build
+        folder: buildProd
           
