--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run buildTSC && npm run buildCSS && npm run buildHTML",
-    "buildWindows": "npm run buildTSC && npm run buildCSSWindows && npm run buildHTMLWindows",
-    "buildTSC" : "tsc",
-    "buildCSS": "cp -r css/ build/css/",
-    "buildHTML": "cp index.html build/",
+    "buildWindows": "npm run buildTSCWindows && npm run buildCSSWindows && npm run buildHTMLWindows",
+    "buildTSC" : "tsc -p tsconfigProd.json",
+    "buildCSS": "cp -r css/ buildProd/css/",
+    "buildHTML": "cp index.html buildProd/",
+    "buildTSCWindows" : "tsc",
     "buildCSSWindows": "xcopy /i /y css\\* build\\css\\",
     "buildHTMLWindows": "xcopy /i /y index.html build\\"
   },
