--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -17,7 +17,7 @@ jobs:
     - name: 🏗️ Build
       run: |
         npm install
-        npm run buildProd
+        npm run build
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
