Revert "[~] Setup prod env to ignore gitignore"
This reverts commit 5a752cb75de0069d46e874129f777ea8c56e3579.

--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -17,9 +17,9 @@ jobs:
     - name: 🏗️ Build
       run: |
         npm install
-        npm run buildProd
+        npm run build
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: buildProd
+        folder: build
           
