--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
         "strict": true,
         "esModuleInterop": true,
         "target": "ES5",
-        "module": "ES6"
+        "module": "ES6",
     }
 }
