Revert "[~] Deployment test"
This reverts commit caad001fead5f9fb327d8a3cfad9a138c3abe178.

--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -17,7 +17,7 @@ jobs:
     - name: 🏗️ Build
       run: |
         npm install
-        npm run build
+        npm run buildProd
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
