--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run buildTSC && npm run buildCSS && npm run buildHTML",
+    "build": "node -v && npm run buildTSC && npm run buildCSS && npm run buildHTML",
     "buildWindows": "npm run buildTSC && npm run buildCSSWindows && npm run buildHTMLWindows",
     "buildTSC" : "tsc",
     "buildCSS": "cp -r css/ build/css/",
