--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node -v && npm run buildTSC && npm run buildCSS && npm run buildHTML",
     "buildWindows": "npm run buildTSC && npm run buildCSSWindows && npm run buildHTMLWindows",
-    "buildTSC" : "tsc",
+    "buildTSC": "tsc",
     "buildCSS": "cp -r css/ build/css/",
     "buildHTML": "cp index.html build/",
     "buildCSSWindows": "xcopy /i /y css\\* build\\css\\",
@@ -27,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/peyronth/sheep-simulator-javascript/issues"
   },
-  "homepage": "https://github.com/peyronth/sheep-simulator-javascript#readme"
+  "homepage": "https://github.com/peyronth/sheep-simulator-javascript#readme",
+  "dependencies": {
+    "undici": "^5.27.0"
+  }
 }
